@@ -16,6 +16,7 @@ For more details, please see the README file.
 	- Add bugfix concerning the running of bash scripts (illegal use of | or |& in command)
 	- Add bugfix concerning the use of the "-snvIndelFiles" and "-candidateSnvIndelSamples" options
 	- Add bugfix for the exomiser use
+	- Add bugfix concerning the AnnotSV installation when PREFIX is not the current directory
 
 Dec 20, 2019: AnnotSV version 2.3
 	- Include phenotype-driven annotations (HPO), based on Exomiser (Smedley et al., 2015)
